feat: update readme including architecture view